--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,7 +14,7 @@ body {
 main {
     margin-top:60px;
     flex-grow: 1;
-    display: flex; /* Make it a flex container */
+    display: flex;
     justify-content: center;
 }
 
